only for running psd

--- a/code/Compute_PSD.ipynb
+++ b/code/Compute_PSD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNA7w9EY/wqzdZVXb1PGJ2m",
+      "authorship_tag": "ABX9TyNmO88I4KU+AijWYmchCciC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Imports"
+      ],
+      "metadata": {
+        "id": "eDvKbqNijDPi"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
@@ -37,9 +46,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "70VVjqUFgj1h",
-        "outputId": "a298b73b-844c-49a9-9729-e03b0aebaba5"
+        "outputId": "0bcca027-9a10-448a-d107-73d7f2e3c6d0"
       },
-      "execution_count": 9,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -52,44 +61,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SaGkSKKaeT6-",
-        "outputId": "a90411a6-1f87-401e-dc1e-2711c44a6001"
+        "id": "SaGkSKKaeT6-"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: numpy==1.21.2 in /usr/local/lib/python3.8/dist-packages (1.21.2)\n",
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: pysteps==1.3.2 in /usr/local/lib/python3.8/dist-packages (1.3.2)\n",
-            "Requirement already satisfied: jsonschema in /usr/local/lib/python3.8/dist-packages (from pysteps==1.3.2) (4.3.3)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.8/dist-packages (from pysteps==1.3.2) (3.2.2)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.8/dist-packages (from pysteps==1.3.2) (1.21.2)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.8/dist-packages (from pysteps==1.3.2) (1.7.3)\n",
-            "Requirement already satisfied: jsmin in /usr/local/lib/python3.8/dist-packages (from pysteps==1.3.2) (3.0.1)\n",
-            "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema->pysteps==1.3.2) (0.19.2)\n",
-            "Requirement already satisfied: importlib-resources>=1.4.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema->pysteps==1.3.2) (5.10.1)\n",
-            "Requirement already satisfied: attrs>=17.4.0 in /usr/local/lib/python3.8/dist-packages (from jsonschema->pysteps==1.3.2) (22.2.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.8/dist-packages (from matplotlib->pysteps==1.3.2) (0.11.0)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->pysteps==1.3.2) (3.0.9)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->pysteps==1.3.2) (2.8.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib->pysteps==1.3.2) (1.4.4)\n",
-            "Requirement already satisfied: zipp>=3.1.0 in /usr/local/lib/python3.8/dist-packages (from importlib-resources>=1.4.0->jsonschema->pysteps==1.3.2) (3.11.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.8/dist-packages (from python-dateutil>=2.1->matplotlib->pysteps==1.3.2) (1.15.0)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "%%capture\n",
+        "!pip install pytorch_lightning\n",
+        "!pip install basemap\n",
         "!pip install numpy==1.21.2 \n",
-        "!pip install pysteps==1.3.2\n"
+        "!pip install pysteps==1.3.2\n",
+        "!pip install xclim\n",
+        "!git clone https://github.com/aim56009/Bias_GAN.git"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# PSD class"
+      ],
+      "metadata": {
+        "id": "m1ateASojITr"
+      }
     },
     {
       "cell_type": "code",
@@ -186,10 +180,32 @@
         "            plt.savefig(fname, format='pdf', bbox_inches='tight')"
       ],
       "metadata": {
-        "id": "RQxhvjxIffmL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RQxhvjxIffmL",
+        "outputId": "43be16f5-707b-4402-cb98-f8cf233b6d04"
       },
-      "execution_count": 11,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pysteps configuration file found at: /usr/local/lib/python3.8/dist-packages/pysteps/pystepsrc\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# RUN PSD"
+      ],
+      "metadata": {
+        "id": "aob_Lo9VjLRS"
+      }
     },
     {
       "cell_type": "code",
@@ -207,12 +223,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 447
+          "height": 411
         },
         "id": "6sHO-4JKgLMH",
-        "outputId": "7965befb-10cf-41be-f1d0-ba3a45a9a656"
+        "outputId": "f6cd076b-f297-49b4-95b1-51636c423d99"
       },
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,19 +236,6 @@
           "text": [
             "/content/gdrive/MyDrive/bias_gan/results/poem_gan_psd.pdf\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "\"\\nplot = PlotAnalysis(plot_data)\\n\\nfname = f'/results/poem_gan_single_frame.pdf' \\n\\nplot.single_frames(cmap='YlGnBu', time_index=-7, mask=True)\\nplt.rcParams.update({'font.size': 12})\\nplt.savefig(fname, format='pdf', bbox_inches='tight')\\nplt.show()\\nprint(fname)\\n\""
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 13
         },
         {
           "output_type": "display_data",
@@ -252,7 +255,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "o0wR_7FwgLdl"
+        "id": "l2tVYbGnkzZB"
       },
       "execution_count": null,
       "outputs": []
