--- a/code/Compute_PSD.ipynb
+++ b/code/Compute_PSD.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "eDvKbqNijDPi"
       ],
-      "authorship_tag": "ABX9TyMxRNf8TFS9n9eBY0xJsOVq",
+      "authorship_tag": "ABX9TyNHGiiTNuuxk6jalz6yBPxW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,29 +42,29 @@
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
-        "drive.mount(\"/content/gdrive\")\n"
+        "drive.mount(\"/content/gdrive\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "70VVjqUFgj1h",
-        "outputId": "a8421a29-7304-47b2-bcb9-fe4d53edbe45"
+        "outputId": "41fe830b-bfb1-4b02-ce5d-b507eda1e7ce"
       },
-      "execution_count": 7,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "id": "SaGkSKKaeT6-"
       },
@@ -76,7 +76,13 @@
         "!pip install numpy==1.21.2 \n",
         "!pip install pysteps==1.3.2\n",
         "!pip install xclim\n",
-        "!git clone https://github.com/aim56009/Bias_GAN.git"
+        "!git clone https://github.com/aim56009/Bias_GAN.git\n",
+        "\n",
+        "from pysteps.utils.spectral import rapsd, corrcoef\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import xarray as xr\n",
+        "import matplotlib.ticker as ticker"
       ]
     },
     {
@@ -91,13 +97,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from pysteps.utils.spectral import rapsd, corrcoef\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "import xarray as xr\n",
-        "import matplotlib.ticker as ticker\n",
-        "\n",
-        "\n",
         "class SpatialSpectralDensity():\n",
         "    \n",
         "    def __init__(self):\n",
@@ -110,7 +109,6 @@
         "        self.poem = xr.open_dataset(f\"/content/gdrive/MyDrive/bias_gan/data_gan/pr_gfdl-esm4_historical_regionbox_1979-2014.nc\").precipitation#*3600*24 \n",
         "        \n",
         "        \n",
-        "\n",
         "        \n",
         "    def compute_mean_spectral_density(self, data: xr.DataArray):\n",
         "        \n",
@@ -170,8 +168,15 @@
         "        ax.set_xlabel(r'k [km]', fontsize=fontsize)\n",
         "        ax.set_ylabel('PSD [a.u]', fontsize=fontsize)\n",
         "        ax.set_title(\"PSD\")\n",
-        "        print(\"absolute error era5 - poem:\",np.sum(self.era5_psd-self.poem_psd))\n",
-        "        print(\"absolute error era5 - gan_psd:\",np.sum(self.era5_psd-self.gan_psd))\n",
+        "\n",
+        "        print(\"absolute error era5 - poem:\",np.sum(abs(self.era5_psd-self.poem_psd)))\n",
+        "        print(\"absolute error era5 - gan_psd:\",np.sum(abs(self.era5_psd-self.gan_psd)))      #### should we take the abs value?\n",
+        "        print(\" should we take the abs value? np.sum(abs(self.era5_psd-self.gan_psd))\")\n",
+        "        print(\"\")\n",
+        "        w_distance_model = wasserstein_distance(self.era5_psd, self.poem_psd)\n",
+        "        print(\"Wasserstein distance climate model\",w_distance_model )\n",
+        "        w_distance_gan = wasserstein_distance(self.era5_psd, self.gan_psd)\n",
+        "        print(\"Wasserstein distance gan\",w_distance_gan )\n",
         "\n",
         "        if fname is not None:\n",
         "            plt.savefig(fname, format='pdf', bbox_inches='tight')\n",
@@ -198,8 +203,15 @@
         "        ax.set_xlabel(r'k [km]', fontsize=fontsize)\n",
         "        ax.set_ylabel('PSD [a.u]', fontsize=fontsize)\n",
         "        ax.set_title(\"log psd error\")\n",
-        "        print(\"absolute log error era5 - poem:\",np.sum(np.log(self.era5_psd)-np.log(self.poem_psd)))\n",
-        "        print(\"absolute log error era5 - gan_psd:\",np.sum(np.log(self.era5_psd)-np.log(self.gan_psd)))\n",
+        "        print(\"absolute log error era5 - poem:\",np.sum(abs(np.log(self.era5_psd)-np.log(self.poem_psd))))\n",
+        "        print(\"absolute log error era5 - gan_psd:\",np.sum(abs(np.log(self.era5_psd)-np.log(self.gan_psd))))\n",
+        "\n",
+        "        print(\"\")\n",
+        "        w_distance_model = wasserstein_distance(np.log(self.era5_psd), np.log(self.poem_psd))\n",
+        "        print(\"Wasserstein distance climate model\",w_distance_model )\n",
+        "        w_distance_gan = wasserstein_distance(np.log(self.era5_psd), np.log(self.poem_psd))\n",
+        "        print(\"Wasserstein distance gan\",w_distance_gan )\n",
+        "\n",
         "        \n",
         "        if fname is not None:\n",
         "            plt.savefig(fname, format='pdf', bbox_inches='tight')\n",
@@ -227,8 +239,8 @@
         "        ax.set_xlabel(r'k [km]', fontsize=fontsize)\n",
         "        ax.set_ylabel('PSD [a.u]', fontsize=fontsize)\n",
         "        ax.set_title(\"absolute log psd error\")\n",
-        "        print(\"log error era5 - poem:\",np.sum(np.log(self.era5_psd)-np.log(self.poem_psd)))\n",
-        "        print(\"log error era5 - gan_psd:\",np.sum(np.log(self.era5_psd)-np.log(self.gan_psd)))\n",
+        "        print(\"log error era5 - poem:\",np.sum(abs(np.log(self.era5_psd)-np.log(self.poem_psd))))\n",
+        "        print(\"log error era5 - gan_psd:\",np.sum(abs(np.log(self.era5_psd)-np.log(self.gan_psd))))\n",
         "        \n",
         "        if fname is not None:\n",
         "            plt.savefig(fname, format='pdf', bbox_inches='tight')"
@@ -236,7 +248,7 @@
       "metadata": {
         "id": "RQxhvjxIffmL"
       },
-      "execution_count": 9,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -259,19 +271,23 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 447
+          "height": 518
         },
         "id": "6sHO-4JKgLMH",
-        "outputId": "b67f107b-19b3-458f-812e-f469bc8716ab"
+        "outputId": "f5cc6799-7f57-4ef2-fcf8-c16a08a30a19"
       },
-      "execution_count": 10,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "absolute error era5 - poem: 4.440241577197135e-15\n",
-            "absolute error era5 - gan_psd: 1.0706496453294356e-15\n"
+            "absolute error era5 - poem: 0.05676308146316814\n",
+            "absolute error era5 - gan_psd: 0.01947031135223748\n",
+            " should we take the abs value? np.sum(abs(self.era5_psd-self.gan_psd))\n",
+            "\n",
+            "Wasserstein distance climate model 0.001957206223200622\n",
+            "Wasserstein distance gan 0.0006713900466288782\n"
           ]
         },
         {
@@ -299,19 +315,22 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 447
+          "height": 500
         },
         "id": "728Rz2moJjtc",
-        "outputId": "46b071e4-09d9-4526-ea88-e7d5a806cde3"
+        "outputId": "ac7d15f9-947a-4638-df4e-32d2d2ba3179"
       },
-      "execution_count": 11,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "absolute log error era5 - poem: 5.808918586316385\n",
-            "absolute log error era5 - gan_psd: 1.9861428937265049\n"
+            "absolute log error era5 - poem: 6.704712861525201\n",
+            "absolute log error era5 - gan_psd: 2.1197201722243517\n",
+            "\n",
+            "Wasserstein distance climate model 0.2310128433482844\n",
+            "Wasserstein distance gan 0.2310128433482844\n"
           ]
         },
         {
@@ -342,7 +361,7 @@
           "height": 447
         },
         "id": "zwPNlhMCOuEa",
-        "outputId": "85411586-a768-469c-ddc6-28020db55c32"
+        "outputId": "72517c9f-4672-48d2-bcb1-e9d11164059c"
       },
       "execution_count": 12,
       "outputs": [
@@ -350,8 +369,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "log error era5 - poem: 5.808918586316385\n",
-            "log error era5 - gan_psd: 1.9861428937265049\n"
+            "log error era5 - poem: 6.704712861525201\n",
+            "log error era5 - gan_psd: 2.1197201722243517\n"
           ]
         },
         {
@@ -390,11 +409,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from scipy.stats import wasserstein_distance\n",
+        "\n",
+        "\n",
+        "w_distance = wasserstein_distance(psd1, psd2)\n",
+        "print(\"Wasserstein distance\",w_distance )\n"
+      ],
+      "metadata": {
+        "id": "l2tVYbGnkzZB",
+        "outputId": "251098b9-61a8-4ee0-eb50-086e581acc85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.04678334539826852\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "l2tVYbGnkzZB"
+        "id": "pg7RTGi_jbo7"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     }
   ]
